--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolt",
+  "name": "codemind-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,47 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.9",
-    "@convex/react": "^1.10.0",
-    "@convex/schema": "^1.10.0",
-    "@google/generative-ai": "^0.2.1",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@codesandbox/sandpack-react": "^2.19.10",
+    "@google/generative-ai": "^0.21.0",
+    "@paypal/react-paypal-js": "^8.7.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@react-oauth/google": "^0.12.1",
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.18",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "convex": "^1.10.0",
-    "dedent": "^1.6.0",
-    "dotenv": "^16.5.0",
-    "lucide-react": "^0.344.0",
-    "next": "14.1.0",
-    "next-themes": "^0.2.1",
-    "postcss": "^8.4.35",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^10.1.0",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "convex": "^1.17.4",
+    "dedent": "^1.5.3",
+    "lucide-react": "^0.471.0",
+    "next": "15.1.4",
+    "next-themes": "^0.4.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-markdown": "^9.0.3",
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
-    "uuid": "^11.1.0"
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "tw-animate-css": "^1.3.0"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.8.3"
   }
 }
