--- a/package.json
+++ b/package.json
@@ -9,35 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@codesandbox/sandpack-react": "^2.19.10",
-    "@google/generative-ai": "^0.21.0",
-    "@paypal/react-paypal-js": "^8.7.0",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@react-oauth/google": "^0.12.1",
-    "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "convex": "^1.17.4",
-    "dedent": "^1.5.3",
-    "lucide-react": "^0.471.0",
-    "next": "15.1.4",
-    "next-themes": "^0.4.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-markdown": "^9.0.3",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.6.0",
-    "tailwind-scrollbar-hide": "^2.0.0",
+    "@clerk/nextjs": "^4.29.9",
+    "@clerk/themes": "^1.7.10",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.24.1",
+    "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "convex": "^1.10.0",
+    "lucide-react": "^0.344.0",
+    "next": "14.1.0",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0",
-    "uuid4": "^2.0.3"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "postcss": "^8",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "@types/react-syntax-highlighter": "^15.5.11",
+    "@types/uuid": "^9.0.8",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.8.3"
+    "typescript": "^5.3.3"
   }
 }
