--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codemind-ai",
+  "name": "CodeAi",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -27,7 +27,6 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-oauth/google": "^0.12.1",
-    "@tailwindcss/postcss": "^4.1.10",
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -60,11 +59,11 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "@types/unist": "^3.0.3",
     "@types/uuid": "^9.0.8",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.5.5",
-    "tailwindcss": "^4.1.10",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
